change text in cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main>
       <article class="card flex">
-        <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <h2>Мысли о проекте: Новые знания требуют времени.</h2>
         <div class="article__img-wrapper">
           <span class="article__label">&lt/HTML&gt</span>
           <picture
@@ -52,11 +52,15 @@
         </div>
         <div class="par-wrapper">
           <p>
-            Это было самое начало пути. На этом этапе важно было проникнуться
-            основами и настроиться на учёбу. И, возможно, подумать, как новые
-            знания могут повлиять на ваше будущее.
+            В этом проекте я впервые пробовала настроить Gulp и использовать
+            Sass. Выполнение проекта затянулось... все время хотелось писать код
+            по-старинке, отказаться от новых технологий, казалось зачем
+            усложнять, ведь сам по себе проект очень простой.
           </p>
-          <p>Место для ваших воспоминаний о начале обучения.</p>
+          <p>
+            Новые знания требуют времени. Но как же круто, оказалось, собрать
+            проект с помощью GULP.
+          </p>
           <div class="buttons-wrapper flex">
             <button class="card__icon-button" type="button">
               <svg
@@ -101,7 +105,7 @@
         </div>
       </article>
       <article class="card flex">
-        <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <h2>Мысли о проекте: Сложно не поддаваться старым привычкам.</h2>
         <div class="article__img-wrapper">
           <span class="article__label">&lt/HTML&gt</span>
           <picture
@@ -111,11 +115,13 @@
         </div>
         <div class="par-wrapper">
           <p>
-            Это было самое начало пути. На этом этапе важно было проникнуться
-            основами и настроиться на учёбу. И, возможно, подумать, как новые
-            знания могут повлиять на ваше будущее.
+            В этом проекте было важно использовать новые знания в области:
+            градиентов (он украшает фон), анимации (svg-сердечко, ховер по кнопкам),
+            адаптива с минимальным использованием медиа-запросов.
           </p>
-          <p>Место для ваших воспоминаний о начале обучения.</p>
+          <p>
+            Сложно не поддаваться старым привычкам. Но новые знания окрыляют.
+          </p>
           <div class="buttons-wrapper flex">
             <button class="card__icon-button" type="button">
               <svg
@@ -161,7 +167,7 @@
         </div>
       </article>
       <article class="card flex">
-        <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <h2>Мысли о проекте: Углублять знания.</h2>
         <div class="article__img-wrapper">
           <span class="article__label">&lt/HTML&gt</span>
           <picture
@@ -171,11 +177,11 @@
         </div>
         <div class="par-wrapper">
           <p>
-            Это было самое начало пути. На этом этапе важно было проникнуться
-            основами и настроиться на учёбу. И, возможно, подумать, как новые
-            знания могут повлиять на ваше будущее.
+            Пришлось и старые знания подтянуть, нырнуть глубже в уже известные
+            глубины и переосмыслить всё еще раз, задавая бессмертный вопрос -
+            "почему?"
           </p>
-          <p>Место для ваших воспоминаний о начале обучения.</p>
+          <p>Углублять знания. Но - это интересно.</p>
           <div class="buttons-wrapper flex">
             <button class="card__icon-button" type="button">
               <svg
