change text in the last p

--- a/index.html
+++ b/index.html
@@ -115,13 +115,11 @@
         </div>
         <div class="par-wrapper">
           <p>
-            В этом проекте было важно использовать новые знания в области:
-            градиентов (он украшает фон), анимации (svg-сердечко, ховер по кнопкам),
-            адаптива с минимальным использованием медиа-запросов.
+            В этот раз было важно использовать новые знания в области:
+            градиентов (он украшает фон), анимации (svg-сердечко, ховер по
+            кнопкам), адаптива с минимальным использованием медиа-запросов.
           </p>
-          <p>
-            Сложно не поддаваться старым привычкам. Но новые знания окрыляют.
-          </p>
+          <p>Сложно не поддаваться старым привычкам. Новые знания окрыляют.</p>
           <div class="buttons-wrapper flex">
             <button class="card__icon-button" type="button">
               <svg
@@ -167,7 +165,10 @@
         </div>
       </article>
       <article class="card flex">
-        <h2>Мысли о проекте: Углублять знания.</h2>
+        <h2>
+          Мысли о проекте: Когда думаешь, что все уже знаешь, но все еще
+          находишь что-то неизведанное.
+        </h2>
         <div class="article__img-wrapper">
           <span class="article__label">&lt/HTML&gt</span>
           <picture
@@ -179,9 +180,12 @@
           <p>
             Пришлось и старые знания подтянуть, нырнуть глубже в уже известные
             глубины и переосмыслить всё еще раз, задавая бессмертный вопрос -
-            "почему?"
+            "Почему?"
           </p>
-          <p>Углублять знания. Но - это интересно.</p>
+          <p>
+            Когда думаешь, что все уже знаешь, но все еще находишь что-то
+            неизведанное. Это интересно!
+          </p>
           <div class="buttons-wrapper flex">
             <button class="card__icon-button" type="button">
               <svg
